Bug 441058 - Kdevelop crashes when opening a document ([re]storing split views)
Summary: Kdevelop crashes when opening a document ([re]storing split views)
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2021-08-16 19:41 UTC by Jonathan Verner
Modified: 2021-08-17 14:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (135.15 KB, text/plain)
2021-08-16 19:41 UTC, Jonathan Verner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Verner 2021-08-16 19:41:30 UTC
Application: kdevelop (5.6.40)

Qt Version: 5.15.3
Frameworks Version: 5.84.0
Operating System: Linux 5.8.0-63-generic x86_64
Windowing System: X11
Drkonqi Version: 5.22.4
Distribution: KDE neon User Edition 5.22

-- Information about the crash:
- What I was doing when the application crashed:

I start kdevelop, open a project and then click on any file in the project. Kdevelop immediately crashes. 

The crash seems to be caused by the code which takes care of (re)storing working sets,
introduced in commit 89594aed, in particular on line 278 in `kdevplatform/shell/workingsets/workingset.cpp`
the call to `view->widget()` fails with an assert. The problem is that the view does not have an initialized widget,
so the `Sublime::View::widget` method tries to create one. However, its not given any parent, which leads to an assert in
`EditorViewWatcher::viewCreated` deeper in the callstack. 

The following patch seems to fix the problem for me:
```diff

diff --git a/kdevplatform/shell/workingsets/workingset.cpp b/kdevplatform/shell/workingsets/workingset.cpp
index 60c0946446..45b8c7671a 100644
--- a/kdevplatform/shell/workingsets/workingset.cpp
+++ b/kdevplatform/shell/workingsets/workingset.cpp
@@ -274,7 +274,7 @@ QSplitter* saveFromAreaPrivate(Sublime::AreaIndex *area, KConfigGroup setGroup,
             }
             ++index;
 
-            if (!parentSplitter) {
+            if (!parentSplitter && view->hasWidget()) {
                 auto p = view->widget()->parentWidget();
                 while (p && !(parentSplitter = qobject_cast<QSplitter*>(p))) {
                     p = p->parentWidget();

```

however, I do not understand the code enough to know whether its not just hiding the problem. Perhaps
the correct thing to do would be to provide a proper parent to the `Sublime::View::widget` method, 
but I don't know what that would be.

If the patch is o.k., I can prepare a pull-request.

The crash can be reproduced every time.

-- Backtrace (Reduced):
#4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#5  0x00007f89a24ed859 in __GI_abort () at abort.c:79
#6  0x00007f89a2930bf7 in qt_message_fatal (context=..., message=<synthetic pointer>...) at global/qlogging.cpp:1914
#7  QMessageLogger::fatal(char const*, ...) const (this=this@entry=0x7fffcb0f7970, msg=msg@entry=0x7f89a2c3bea0 "ASSERT: \"%s\" in file %s, line %d") at global/qlogging.cpp:893
#8  0x00007f89a2930003 in qt_assert(char const*, char const*, int) (assertion=<optimized out>, file=<optimized out>, line=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qlogging.h:90


Possible duplicates by query: bug 440777, bug 440257, bug 438433, bug 429344, bug 427384.

Reported using DrKonqi
Comment 1 Jonathan Verner 2021-08-16 19:41:32 UTC
Created attachment 140779 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Milian Wolff 2021-08-17 07:46:56 UTC
I think the code is fine. Note how that area is trying to find the parentSplitter as a parent of the widget. So if we don't have a widget, we don't have a parent and thus cannot find the splitter.

Can you please submit this patch?
Comment 3 Bug Janitor Service 2021-08-17 12:01:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/kdevelop/kdevelop/-/merge_requests/247
Comment 4 Bug Janitor Service 2021-08-17 12:01:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/kdevelop/kdevelop/-/merge_requests/247
Comment 5 Jonathan Verner 2021-08-17 12:04:19 UTC
(In reply to Milian Wolff from comment #2)
> I think the code is fine. Note how that area is trying to find the
> parentSplitter as a parent of the widget. So if we don't have a widget, we
> don't have a parent and thus cannot find the splitter.
> 
> Can you please submit this patch?

Milian, thanks for the quick reaction. I've created a merge request on
invent.kde.org:

https://invent.kde.org/kdevelop/kdevelop/-/merge_requests/247
Comment 6 Jonathan Verner 2021-08-17 14:22:52 UTC
Git commit 50eaff66056898d039047f54290b3e5d8f09594f by Jonathan L. Verner.
Committed on 17/08/2021 at 11:58.
Pushed by mwolff into branch 'master'.

Fix crash when storing working sets area split-view config

When storing working sets commit 89594aed introduced a crash, which happens
when the code tries to find the parent splitter while the view doesn't have
an initialized widget. In this case calling `view->widget()` method tries
to create a new widget, but fails with an assert in `EditorViewWatcher::viewCreated`
because no parent for the widget is given.

M  +1    -1    kdevplatform/shell/workingsets/workingset.cpp

https://invent.kde.org/kdevelop/kdevelop/commit/50eaff66056898d039047f54290b3e5d8f09594f